--- a/eshop-zone/src/app/nav-bar/nav-bar.component.html
+++ b/eshop-zone/src/app/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="navbar">
 
-  <div  class="app-name">Eshop-Zone</div>
+  <div  routerLink="/home" class="app-name">Eshop-Zone</div>
   <div>
       <span routerLink="/orders" class="nav-option">Orders</span>
       <span><mat-icon  routerLink="/profile" class="nav-icon">account_circle</mat-icon></span>
