--- a/eshop-zone/src/app/store/catalogue/catalogue.component.html
+++ b/eshop-zone/src/app/store/catalogue/catalogue.component.html
@@ -1,17 +1,16 @@
 <div class="list">
-    <mat-card class="example-card">
+    <mat-card class="example-card"  *ngFor="let product of products; let i=index">
         <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
         <mat-card-content>
-            <mat-card-title>Shiba Inu</mat-card-title>
-            <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-            <p>
-            The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.\
-            </p>
+            <mat-card-title>{{product.name}}</mat-card-title>
+            <mat-card-subtitle>{{product.category}}</mat-card-subtitle>
+            <p>{{product.description}}</p>
         </mat-card-content>
         <mat-card-actions class="action">
-            <button mat-button>LIKE</button>
-            <button mat-button>SHARE</button>
+            <span>{{product.price}}</span>
+            <span>
+                <button (click)="onClickLog()" mat-button><mat-icon>add_shopping_cart</mat-icon></button>
+            </span>
         </mat-card-actions>
     </mat-card>
-
 </div>
