--- a/eshop-zone/src/app/nav-bar/nav-bar.component.css
+++ b/eshop-zone/src/app/nav-bar/nav-bar.component.css
@@ -5,7 +5,8 @@ span{
     padding-right: 1rem;
 }
 .app-name{
-    font-size: larger;
+    font-size: xxx-large;
+    font-family: Copperplate,fantasy;
 }
 .nav-option{
     font-size: medium;
