--- a/eshop-zone/src/app/store/cart/cart.component.html
+++ b/eshop-zone/src/app/store/cart/cart.component.html
@@ -1,1 +1,68 @@
-<p>cart works!</p>
+<div class="row">
+    <div class="col-lg-8">
+        <div class="container-fluid shadow p-3 mb-5 bg-white rounded">    
+            <div class="col-md-12">
+                <div class="row heading-card">
+                    <div class="form-group col-md-12 "><h2>My Cart</h2></div>
+                </div>
+                <div class="row item-card">
+                    <div class="col-3">
+                        <div class="image">
+                            <img mat-card-image src="" alt="Item image">
+                        </div>
+                        
+                    </div>
+                    <div class="col-7">
+                        <h2 class="item-name">hello</h2>
+                        <h4 class="item-category">hi</h4>
+                        <p class="tem-prize">223 x 3</p>
+                        <div class="row item-action">
+                            <div class="col-6">
+                                <div class="row p-0">
+                                    
+                                    <div class="col-1 p-0 icon minus">
+                                        <mat-icon [inline]="true">remove_circle</mat-icon>
+                                    </div>
+                                    <div class="col-4 p-0">
+                                        <input type="number" class="form-control">
+                                    </div>
+
+                                    <div class="col-1 p-0 icon">
+                                        <mat-icon [inline]="true">add_circle</mat-icon>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <button class="btn btn-dark">Remove</button>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="col-2">
+                        <h2>Item total</h2>
+                        <h2>₹ &nbsp;223 </h2>
+                        
+                    </div>
+                    
+                </div>
+                
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-4">
+        <div class=" shadow p-3 mb-5 bg-white rounded">
+                <div class="col-md-12">
+                    <div class="row heading-card">
+                        <div class="form-group col-md-12 "><h2>PRICE DETAILS</h2></div>
+                    </div>    
+                </div>    
+                <div class=" item-card">
+
+                </div>  
+                <div class="row text-center">
+                    <span class="btn btn-lg btn-dark  center-item">Check Out</span>
+                </div>
+                
+        </div>
+    </div>
+</div>
