--- a/eshop-zone/src/app/user/profile/profile.component.html
+++ b/eshop-zone/src/app/user/profile/profile.component.html
@@ -1,1 +1,8 @@
-<p>profile works!</p>
+<div class="row">
+    <div class="col-lg-8">
+        <app-user-details></app-user-details>
+    </div>
+    <div class="col-lg-4">
+        <app-user-wallet></app-user-wallet>
+    </div>
+</div>
