--- a/eshop-zone/src/app/merchant/add-product/add-product.component.html
+++ b/eshop-zone/src/app/merchant/add-product/add-product.component.html
@@ -1,1 +1,53 @@
-<p>add-product works!</p>
+<div class="container-fluid">
+    
+    <div class="col-md-8">
+        <div class="row">
+            <div class="form-group col-md-6"><h2>Add New Product</h2></div>
+        </div>
+        
+        <form >
+            <div  class="text-danger"></div>
+            <div class="row">
+                <div class="form-group col-md-6">
+                    <label class="control-label">Name</label>
+                    <input type="text" class="form-control" required>
+                    <span class="text-danger"></span>
+                </div>
+                <div class="form-group col-md-6">
+                    <label class="control-label">description</label>
+                    <input class="form-control" required>
+                    <span class="text-danger"></span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group col-md-6">
+                    <label  class="control-label">Price</label>
+                    <input class="form-control" step="1" min="0" required>
+                    <span class="text-danger"></span>
+                </div>
+                <div class="form-group col-md-6">
+                    <label  class="control-label">Category</label>
+                    <input class="form-control" required>
+                    <span class="text-danger"></span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group col-md-6">
+                    <label class="control-label"></label>
+                    <div class="custom-file">
+                        <input class="form-control custom-file-input" />
+                        <label class="custom-file-label">Choose file</label>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group col-md-1 margin-r40">
+                    <input type="submit" value="Add Item" class="btn btn-primary btn-color" />
+                </div>
+                <div class="form-group col-md-1">
+                    <input type="button" value="Cancel" class="btn btn-secondary" />
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
