--- a/eshop-zone/src/app/store/catalogue/catalogue.component.css
+++ b/eshop-zone/src/app/store/catalogue/catalogue.component.css
@@ -1,14 +1,29 @@
-.example-card {
-  max-width: 350px;
-  max-height: 450px;
+.card {
+  max-width: 275px;
+  max-height: 390px;
   margin: 10px;
   display: inline-block;
 }
-
+.card:hover {
+ background-color:rgb(32, 32, 34);
+}
+img {
+  object-fit: cover;
+  max-width: 275px;
+  max-height: 200px;
+}
 .list{
     justify-content: space-around;
 }
 .action{
+    vertical-align: middle;
     padding-left: 10px;
     justify-content: space-between;
+}
+mat-card-content{
+  margin-bottom: 0px;
+  height: 120px;
+}
+button{
+  float:right;
 }
