--- a/eshop-zone/src/app/store/cart/cart.component.html
+++ b/eshop-zone/src/app/store/cart/cart.component.html
@@ -60,7 +60,7 @@
 
                 </div>  
                 <div class="row text-center">
-                    <span class="btn btn-lg btn-dark  center-item">Check Out</span>
+                    <span routerLink="/checkout" class="btn btn-lg btn-dark  center-item">Check Out</span>
                 </div>
                 
         </div>
