--- a/eshop-zone/src/app/user/order/order.component.html
+++ b/eshop-zone/src/app/user/order/order.component.html
@@ -1,1 +1,26 @@
-<p>order works!</p>
+  
+
+<div class="col-lg-10 center-item">
+    <div class="col-md-12 mt-5">
+        <h1>Orders</h1>                   
+    </div>   
+
+    <mat-expansion-panel class="mt-1">
+        <mat-expansion-panel-header>
+        <mat-panel-title>
+            Personal data
+        </mat-panel-title>
+        <mat-panel-description class="description">
+            Type your name and age
+            <mat-icon>account_circle</mat-icon>
+        </mat-panel-description>
+        </mat-expansion-panel-header>
+
+        <div class="order-details">
+        </div>
+        <div class="action">      
+        </div>
+
+    </mat-expansion-panel>  
+        
+</div>
