--- a/eshop-zone/src/app/nav-bar/nav-bar.component.html
+++ b/eshop-zone/src/app/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="navbar">
+<mat-toolbar *ngIf="isActive" class="navbar">
 
   <div  routerLink="/home" class="app-name">Eshop-Zone</div>
   <div>
