--- a/eshop-zone/src/app/auth/signin/signin.component.html
+++ b/eshop-zone/src/app/auth/signin/signin.component.html
@@ -1,24 +1,21 @@
-<div class="container-fluid">
-    
-    <div class="col-md-8">
-        <div class="row text-center">
-            <div class="form-group col-md-12 "><h2>Eshop-Zone</h2></div>
+<div class="auth-card ">    
+    <div class="col-12 form-container ">
+        <div class="row text-center sign-head">
+            <div class="form-group col-12 mt-3"><h1>Eshop-Zone</h1></div>
         </div>
-        <form [formGroup]="signinForm" >
-            <div class="form-group col-md-6">
-                <label class="control-label text-secondary">Name</label>
-                <input formControlName="name" type="text" class="form-control" >
-                <span class="text-danger"></span>
+        <div class="col-12 form-head"><h1>Log In</h1></div>
+        <form [formGroup]="signinForm"  (submit)="signIn()">
+            <div class="form-group col-md-10 centered">
+                <label class="control-label text-secondary">Email</label>
+                <input formControlName="email" type="text" class="form-control" >
             </div>
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-10 centered">
                 <label class="control-label text-secondary">Password</label>
                 <input formControlName="password" class="form-control" >
-                <span class="text-danger"></span>
             </div>
-            <div class="form-group col-md-6">
-                <button type="submit" class="btn btn-primary">Sign in</button>
+            <div class="form-group col-md-10 centered">
+                <button type="submit" class="btn btn-dark">Sign in</button>
             </div>
-            {{signinForm.value|json}}
         </form>
     </div>
 </div>
