--- a/eshop-zone/src/app/auth/signup/signup.component.html
+++ b/eshop-zone/src/app/auth/signup/signup.component.html
@@ -1,10 +1,11 @@
-<div class="container-fluid ">
+<div class="auth-card ">
     
-    <div class="col-4 form-container ">
+    <div class="col-12 form-container ">
         <div class="row text-center sign-head">
-            <div class="form-group col-12 "><h1>Eshop-Zone</h1></div>
+            <div class="form-group col-12  mt-3"><h1>Eshop-Zone</h1></div>
         </div>
-        <form [formGroup]="signupForm"  (submit)="signUp()">
+        <div class="col-12 form-head"><h1>Register</h1></div>
+        <form [formGroup]="signupForm" class="mt-5" (submit)="signUp()">
             <div class="form-group col-md-10 centered">
                 <label class="control-label text-secondary">Name</label>
                 <input [class.is-invalid]="signupForm.get('name')?.invalid && signupForm.get('name')?.touched " 
