--- a/eshop-zone/src/app/auth/signin/signin.component.html
+++ b/eshop-zone/src/app/auth/signin/signin.component.html
@@ -11,11 +11,14 @@
             </div>
             <div class="form-group col-md-10 centered">
                 <label class="control-label text-secondary">Password</label>
-                <input formControlName="password" class="form-control" >
+                <input type="password" formControlName="password" class="form-control" >
             </div>
             <div class="form-group col-md-10 centered">
                 <button type="submit" class="btn btn-dark">Sign in</button>
             </div>
         </form>
+        <div class="col-12 form-head">
+            <p class="ml-3 mb-5">Don't have an account?<a routerLink="/signup">Signup here</a></p>
+        </div>
     </div>
 </div>
