--- a/eshop-zone/src/app/auth/signup/signup.component.html
+++ b/eshop-zone/src/app/auth/signup/signup.component.html
@@ -27,17 +27,20 @@
             <div class="form-group col-md-10 centered">
                 <label class="control-label text-secondary">Password</label>
                 <input  [class.is-invalid]="signupForm.get('password')?.invalid && signupForm.get('password')?.touched " 
-                formControlName="password" class="form-control" >
+                type="password" formControlName="password" class="form-control" >
             </div>
             <div class="form-group col-md-10 centered">
                 <label  class="control-label text-secondary">Confirm Password</label>
                 <input [class.is-invalid]="(signupForm.errors?.passwordMissMatch && (signupForm.touched || signupForm.dirty) )|| signupForm.get('confimPassword')?.invalid && signupForm.get('confimPassword')?.touched "
-                 formControlName="confimPassword" class="form-control" >
+                type="password" formControlName="confimPassword" class="form-control" >
                 <small *ngIf="signupForm.errors?.passwordMissMatch && (signupForm.touched || signupForm.dirty)" 
                     class="text-danger">Passwords does not match</small>
             </div>
             <div class="form-group col-md-10 centered">
                 <button type="submit" class="btn btn-dark">Sign up</button>
+            </div>
+            <div class="col-12 form-head">
+                <p class="ml-3 mb-5">Already have an account?<a routerLink="/signin">Signin here</a></p>
             </div>
         </form>
     </div>
