Web app order listing and status update functionality

--- a/eshop-zone/src/app/user/order/order.component.html
+++ b/eshop-zone/src/app/user/order/order.component.html
@@ -2,7 +2,7 @@
 
 <div class="col-lg-10 center-item">
     <div class="col-md-12 mt-5">
-        <h1>Orders</h1>                   
+        <h1>Order</h1>                   
     </div>   
 
     <mat-expansion-panel class="mt-1">
