Cart Page added and bug fixes

--- a/eshop-zone/src/app/nav-bar/nav-bar.component.html
+++ b/eshop-zone/src/app/nav-bar/nav-bar.component.html
@@ -2,16 +2,21 @@
 
   <div  routerLink="/home" class="app-name">Eshop-Zone</div>
   <div>
-      <span routerLink="/orders" class="nav-option">Orders</span>
-      <span> <mat-icon [matMenuTriggerFor]="beforeMenu" class="nav-icon">account_circle</mat-icon>
+
+    <span *ngIf="isLoggedIn" routerLink="/productlist" class="nav-option">Dashboard</span>
+      <span *ngIf="isLoggedIn" routerLink="/orders" class="nav-option">Orders</span>
+      <span  *ngIf="isLoggedIn"> 
+        <mat-icon [matMenuTriggerFor]="beforeMenu" class="nav-icon">account_circle</mat-icon>
         <mat-menu #beforeMenu="matMenu" xPosition="before">
-          <span *ngIf="isLoggedIn" routerLink="/profile" mat-menu-item>My Profile</span>
-          <span *ngIf="isLoggedIn" (click)="logOut()" mat-menu-item>Log out</span>
-          <span *ngIf="!isLoggedIn" routerLink="/signin" mat-menu-item>Log in</span>
+          <span routerLink="/profile" mat-menu-item>My Profile</span>
+          <span (click)="logOut()" mat-menu-item>Log out</span>
         </mat-menu>
-        
-       </span>
-      <span><mat-icon  routerLink="/cart" class="nav-icon" [matBadge]="cartItemCount" matBadgeColor="warn" [matBadgeHidden]="cartItemCount==0" >shopping_cart</mat-icon></span>
+      </span>
+      <span>
+        <mat-icon  *ngIf="isLoggedIn"   routerLink="/cart" class="nav-icon" [matBadge]="cartItemCount" matBadgeColor="warn" [matBadgeHidden]="cartItemCount==0" >shopping_cart</mat-icon>
+      </span>
+
+      <span *ngIf="!isLoggedIn" routerLink="/signin" class="nav-option">Log In</span>
   </div>
   
 </mat-toolbar>
